log-schemas/27.5/opcua_binary_browse_response_references.rst
``opcua_binary_browse_response_references`` field reference
-----------------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``browse_reference_link_id`` (string)
     - The browse_reference_link_id information.

   * - ``browse_response_ref_encoding_mask`` (string)
     - The browse_response_ref_encoding_mask information.

   * - ``browse_response_ref_namespace_idx`` (integer - count)
     - The browse_response_ref_namespace_idx information.

   * - ``browse_response_ref_numeric`` (integer - count)
     - The browse_response_ref_numeric information.

   * - ``browse_response_ref_string`` (string)
     - The browse_response_ref_string information.

   * - ``browse_response_ref_guid`` (string)
     - The browse_response_ref_guid information.

   * - ``browse_response_ref_opaque`` (string)
     - The browse_response_ref_opaque information.

   * - ``browse_response_is_forward`` (boolean - bool)
     - The browse_response_is_forward information.

   * - ``browse_response_ref_type_encoding_mask`` (string)
     - The browse_response_ref_type_encoding_mask information.

   * - ``browse_response_ref_type_namespace_idx`` (integer - count)
     - The browse_response_ref_type_namespace_idx information.

   * - ``browse_response_ref_type_numeric`` (integer - count)
     - The browse_response_ref_type_numeric information.

   * - ``browse_response_ref_type_string`` (string)
     - The browse_response_ref_type_string information.

   * - ``browse_response_ref_type_guid`` (string)
     - The browse_response_ref_type_guid information.

   * - ``browse_response_ref_type_opaque`` (string)
     - The browse_response_ref_type_opaque information.

   * - ``browse_response_ref_type_namespace_uri`` (string)
     - The browse_response_ref_type_namespace_uri information.

   * - ``browse_response_ref_type_server_idx`` (integer - count)
     - The browse_response_ref_type_server_idx information.

   * - ``browse_response_ref_name_idx`` (integer - count)
     - The browse_response_ref_name_idx information.

   * - ``browse_response_ref_name`` (string)
     - The browse_response_ref_name information.

   * - ``browse_response_display_name_mask`` (string)
     - The browse_response_display_name_mask information.

   * - ``browse_response_display_name_locale`` (string)
     - The browse_response_display_name_locale information.

   * - ``browse_response_display_name_text`` (string)
     - The browse_response_display_name_text information.

   * - ``browse_response_node_class`` (string)
     - The browse_response_node_class information.

   * - ``browse_response_type_def_encoding_mask`` (string)
     - The browse_response_type_def_encoding_mask information.

   * - ``browse_response_type_def_namespace_idx`` (integer - count)
     - The browse_response_type_def_namespace_idx information.

   * - ``browse_response_type_def_numeric`` (integer - count)
     - The browse_response_type_def_numeric information.

   * - ``browse_response_type_def_string`` (string)
     - The browse_response_type_def_string information.

   * - ``browse_response_type_def_guid`` (string)
     - The browse_response_type_def_guid information.

   * - ``browse_response_type_def_opaque`` (string)
     - The browse_response_type_def_opaque information.

   * - ``browse_response_type_def_namespace_uri`` (string)
     - The browse_response_type_def_namespace_uri information.

   * - ``browse_response_type_def_server_idx`` (integer - count)
     - The browse_response_type_def_server_idx information.
